# argilla_wrapper

./: .gitignore  config.py  docker-compose.yaml  main.py  mlflow.db  pyproject.toml
app/: app.py  schemas.py
app/resource/: train_classification_model.py
resource/: train_classification_model.py
