[project]
name = "argilla_wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argilla>=2.8.0",
    "black>=25.12.0",
    "fastapi>=0.124.4",
    "mlflow>=3.8.1",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "transformers[torch]>=4.57.6",
    "uvicorn>=0.38.0",
]
